<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frontier_exploration</name>
  <version>0.0.1</version>
  <description>Frontier exploration package for autonomous navigation</description>
  <maintainer email="example@example.com">Team 20</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- Nav2 Dependencies -->
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_navfn_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_amcl</depend>

  <!-- Python Dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 